[package]
name = "orion_lib"
version = "4.0.0"
edition = "2021"
description = "A library for parsing and executing the Orion Programming Language"
license-file = "LICENSE"
documentation = "https://docs.rs/orion_lib"
repository = "https://github.com/Solarcode-org/orion-lib"
readme = "README.md"
keywords = ["programming_language"]
categories = ["compilers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.16.0"
color-eyre = "0.6.3"
logos = "0.14.0"
rustlr = { version = "0.5.1", default-features = false }
thiserror = "1.0.60"

[build-dependencies]
color-eyre = "0.6.3"
rustlr = "0.5.1"
