[package]
name = "orion_lib"
version = "4.0.0"
edition = "2021"
description = "A library for parsing and executing the Orion Programming Language"
license-file = "LICENSE"
documentation = "https://docs.rs/orion_lib"
repository = "https://github.com/Solarcode-org/orion-lib"
readme = "README.md"
keywords = ["programming_language"]
categories = ["compilers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
thiserror = "1.0.60"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

[build-dependencies]
color-eyre = "0.6.3"
lalrpop = "0.20.2"
